# starfish

./: .gitignore  CONSTITUTION.md  LICENSE  MANIFEST.in  README.md  app.py  database.py  desktop.py  pyproject.toml  requirements.txt  server.py  settings.py
api/: agents.py  chat.py  evolve.py  mcp.py  prompts.py  settings.py  skills.py  state.py
config/: env  env.dev
core/: agent_registry.py  chat_log.py  desktop.py  mcp_client.py  mcp_registry.py  orchestrator.py  prompt_registry.py  prompts.py  server.py  user_profile.py
core/registry/: mcp_registry.py  skill_registry.py  tool_catalog_registry.py
core/static/: app.js  index.html  style.css
core/vue/: .gitignore  README.md  package-lock.json  vite.config.js
core/vue/src/: App.vue  api.js
core/vue/src/components/: McpDialog.vue  PromptDialog.vue  SettingsDialog.vue  ToolsDialog.vue
core/vue/src/styles/: main.css
evolver/: applier.py  evolve.py  prompts.py  proposals.py  snapshot.py
script/: prompts.py  tools.py
skills_export/: SKILL.md
view/: index.html  package.json  vite.config.js
view/src/: App.vue  api.js
view/src/components/: AgentDialog.vue  AppDialog.vue  SkillDialog.vue  ToolsDialog.vue
view/src/styles/: main.css
vue/src/components/: ToolsDialog.vue
web/: __init__.py  agents.py  mcp.py  prompts.py  skills.py  snapshot.py  state.py
