[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "starfish-agent"
version = "0.1.7"
description = "可自我进化的智能助手"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Starfish Team"},
]
keywords = ["ai", "agent", "self-evolving", "crewai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "crewai>=0.80.0",
    "crewai-tools>=0.14.0",
    "mcp>=1.0.0",
    "python-dotenv>=1.0.0",
    "sentence-transformers>=2.2.0",
]

[project.urls]
Homepage = "https://github.com/your-org/starfish-agent"

[project.scripts]
starfish = "app:main"

[tool.setuptools]
py-modules = ["app", "settings", "database"]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"*" = ["script/*.py", "CONSTITUTION.md"]
"config" = ["env", "env.dev"]