[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spore-agent"
version = "0.0.1"
description = "可自我进化的智能助手"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "gaoliandi", email = "963937371@qq.com"},
]
keywords = ["ai", "agent", "self-evolving", "crewai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "crewai>=0.80.0",
    "crewai-tools>=0.14.0",
    "mcp>=1.10.0",
    "python-dotenv>=1.0.0",
    "sentence-transformers>=2.2.0",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "PyQt6>=6.6.0",
    "PyQt6-WebEngine>=6.6.0",
]

[project.urls]
Homepage = "https://github.com/SiriusCM/spore"

[project.scripts]
spore = "app:main"

[tool.setuptools]
py-modules = ["app", "database", "desktop", "server", "settings"]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"*" = ["CONSTITUTION.md", "config/*", "view/dist/*", "view/dist/assets/*"]
